# zipbomb

./: .gitignore  CMakeLists.txt  delete_scatter.ps1  installer.nsh  main.c  simulate_full_expansion.bat  simulate_full_expansion.ps1  simulate_with_gui.ps1
VPS/: instrictions.txt  package-lock.json  package.json  reciever.js
